# E2R

./: CMakeLists.txt  EToRConvert.cc  EToRConvert.hh  Geant4Config.cmake  README.md  main.cc
example/: CMakeLists.txt
example/include/: EToRConvForGamma.hh  EToRConvForPositron.hh  EToRConvForProton.hh
example/src/: B1PrimaryGeneratorAction.cc  B1RunAction.cc  EToRConvForElectron.cc  EToRConvForPositron.cc  EnergyToRangeConverter.cc
include/: #EnergyToRangeConverter.hh#  EToRConvForElectron.hh  EnergyToRangeConverter.hh
src/: EToRConvForElectron.cc  EToRConvForGamma.cc  EToRConvForProton.cc  EnergyToRangeConverter.cc
